Breaking the infinite loop properly.